--- a/4/style.css
+++ b/4/style.css
@@ -55,6 +55,9 @@ button:hover{
     width: 350px;
     height: 300px;
 }
+.main li > *:not(:last-child) {
+    margin-bottom: 5px;
+}
 .edits {
     display: none;
     position: absolute;
@@ -77,7 +80,21 @@ button:hover{
     display: grid;
     cursor: pointer;
 }
-
+.detail > *, .buy > *:not(button) {
+    background-color: white;
+}
+.detail > div {
+    justify-items: end;
+    display: grid;
+    cursor: pointer;
+}
+.detail {
+    display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 95%;
+    height: 98%;
+}
 .showDetail {
     display: block;
 }
